CAUSEWAY-3892: New Major Version 4 (Upgrade from Spring Boot 3.x to 4.x)